<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<TextView
            android:id="@+id/last_reading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/Mark_as_last_reading"
            android:textColor="?attr/textColor"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:drawablePadding="20dp"
            app:drawableStartCompat="@drawable/ic_last_reading" />-->

        <TextView
            android:id="@+id/highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/Highlight_this_Verse"
            android:fontFamily="@font/roboto_slab"
            android:textColor="?attr/textColor"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:drawablePadding="20dp"
            app:drawableStartCompat="@drawable/ic_highlight" />

        <TextView
            android:id="@+id/favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/Add_to_Favorites"
            android:fontFamily="@font/roboto_slab"
            android:textColor="?attr/textColor"
            android:textSize="18sp"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/ic_favorite" />

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/Add_note_to_verse"
            android:textColor="?attr/textColor"
            android:textSize="18sp"
            android:drawablePadding="20dp"
            android:fontFamily="@font/roboto_slab"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/ic_note" />

        <TextView
            android:id="@+id/copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/Copy_this_Verse"
            android:textColor="?attr/textColor"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_slab"
            app:drawableStartCompat="@drawable/ic_copy" />

        <TextView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/Share_this_Verse"
            android:textColor="?attr/textColor"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_slab"
            app:drawableStartCompat="@drawable/ic_share" />
    </LinearLayout>
</androidx.cardview.widget.CardView>